@@ -1,0 +1,56 @@
+This file contains information for people that want to build
+rpm packages for the XForms library.
+
+1) While the name of this library is known as is 'xforms' (and has for
+   been so for at least 20 years) most distributions use a name starting
+   with 'libforms' - for the obvious reason that the most important
+   part is a shared library. This requires a bit of tweaking to create
+   a package with the correct name but which now is fully automated.
+
+2) To create the rpm package simply run
+
+     make rpmdist
+
+   This, of course, requires that the Makefile exist. To create it
+   run
+
+     ./configure
+
+   or, if you start from the git repository, use
+
+     ./autogen.sh && ./configure
+
+   (note that this requires the autoconf, automale and libtool
+   packages to be installed).
+
+3) Runing 'make rpmdist' creates three packages with names of the form
+
+     libforms-v-r.d.a,rpm
+     libforms-devel-v-r.d.a.rpm
+     libforms-doc-v-r.d.noarch.rpm
+
+   where 'v' is the version of the package, 'r' its release number,
+   'd' the distributions name and 'a' the architecture the rpm package
+   was build for (the third, documentation package is architecture-
+   independent, but note that, due to a rpmbuild bug, on systems
+   with an older rpmbuild program it will also have a name of
+
+     libforms-doc-v-r.d.a.rpm
+
+   Creating the complete documentation reqiures a number of extra
+   packages, at least info, texi2html, texinfo and ImageMagick.
+
+4) The resulting packages have been tested (on CentOS 6.5) with
+   rpmlint. There were no errors, just a number of unavoidable
+   warnings. These mostly are complaints from the spellchecker
+   about the word 'XForms' and then there's a larger number of
+   warnings for the documentation package. All these result from
+   the fact that rpmbuild and rpmlint don't expect anything else
+   than .info files in the info directory. But this doesn't take
+   into account that emacs in info mode is able to display images
+   embeded in the info documentation - and they need to be stored
+   somewhere below the info directory. But then rpmlint complains
+   about them not being UTF-8 files and also wants them to be
+   gzip'ed (which emacs' info mode unforunately doesn't like...).
+
+   All packages should also cleanly deinstall.
